<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bank Sephora</string>
    <string name="appBank">BANK SEPHORA</string>
    <string name="title_activity_example_on_boarding">ExampleOnBoardingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    //String Uswa
    <string name="butuh_bantuan">Butuh Bantuan?</string>
    <string name="content1.1">Kemudahan dalam Genggaman</string>
    <string name="content1.2">Hanya dengan 3 langkah registrasi, nikmati segala kemudahan dalam bertransaksi</string>
    <string name="content2.1">Transaksi Internasional</string>
    <string name="content2.2">Nikmati kemudahan bertransaksi di seluruh dunia dengan kartu VISA dan Mastercard </string>
    <string name="content3.1">Keamanan Dalam Bertransaksi</string>
    <string name="content3.2">Kemanan dalam bertransaksi Anda merupakan prioritas bagi kami</string>
    <string name="login_uswa">LOGIN</string>
    <string name="login_content_uswa">Silahkan masukkan username dan password terdaftar Anda untuk melakukan login</string>
    <string name="usernamelogin">Username</string>
    <string name="pwdlogin">Password</string>
    <string name="masuk">Masuk</string>
    <string name="contentbottomlogin">PT Bank Sephora Indonesia ("Bank Sephora") telah berlisensi oleh Bank Indonsia dan diawasi oleh Otoritas Jasa Keuangan (OJK) serta merupakan peserta dari Lembaga Penjamin Simpanan (LPS).</string>
    <string name="lupapass_uswa">Lupa Username / Password ?</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
