<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uswa.screen.login.LoginActivity_uswa"
    android:background="@color/back_onboard">

    <com.example.banksephora.uswa.shared.ui.HeaderView_LoginOnboard_uswa
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>


<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:id="@+id/constraintLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginTop="30dp"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        android:layout_marginRight="20dp"-->
<!--        android:layout_marginLeft="20dp">-->

<!--        <TextView-->
<!--            android:id="@+id/textView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/appBank"-->
<!--            android:textSize="18sp"-->
<!--            android:textColor="@color/text_bank_uswa"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintRight_toLeftOf="@+id/imageView"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

<!--        <ImageView-->
<!--            android:id="@+id/imageView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="35dp"-->
<!--            android:scaleType="fitCenter"-->
<!--            android:src="@drawable/toogle"-->
<!--            app:layout_constraintBottom_toBottomOf="@+id/textView"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="@+id/textView" />-->

<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

   <androidx.cardview.widget.CardView
       android:layout_width="375dp"
       android:layout_height="730dp"
       android:layout_marginTop="30dp"
       android:layout_alignParentLeft="true"
       android:layout_alignParentBottom="true"
       android:layout_marginBottom="-88dp"
       android:clipToOutline="true"
       android:elevation="10dp"
       android:background="@color/white"
       app:cardCornerRadius="20dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
       >

       <TextView
           android:layout_width="45dp"
           android:layout_height="26dp"
           android:text="@string/login_uswa"
           android:textColor="@color/text_content1.1"
           android:layout_marginTop="61dp"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="310dp"
           android:textAlignment="center"
           />
       <TextView
           android:layout_width="335dp"
           android:layout_height="36dp"
           android:layout_marginTop="91dp"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:text="@string/login_content_uswa"
           android:textColor="@color/text_content1.2"
           />

       <androidx.cardview.widget.CardView
           android:layout_width="335dp"
           android:layout_height="276dp"
           android:layout_marginTop="148dp"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           app:cardCornerRadius="15dp"
           android:layout_alignParentLeft="true"
           android:layout_alignParentTop="true"
           >
        
           <com.example.banksephora.uswa.shared.ui.HeaderForm
                android:id="@+id/editUsername"
               android:layout_width="305dp"
               android:layout_height="48dp"
               android:text="@string/usernamelogin"
               android:textColor="@color/text_content1.2"
               android:layout_marginTop="25dp"
               android:padding="10dp"
               android:layout_marginLeft="15dp"
               android:layout_marginRight="15dp"
               android:background="@color/color_editlogin"
               />
           <com.example.banksephora.uswa.shared.ui.HeaderForm
               android:id="@+id/editPassword"
               android:layout_width="305dp"
               android:layout_height="50dp"
               android:text="@string/pwdlogin"
               android:textColor="@color/text_content1.2"
               android:layout_marginTop="93dp"
               android:padding="10dp"
               android:layout_marginLeft="15dp"
               android:layout_marginRight="15dp"
               android:background="@color/color_editlogin"
               />

           <androidx.appcompat.widget.AppCompatButton
               android:id="@+id/masuk"
               android:layout_width="305dp"
               android:layout_height="40dp"
               android:text="@string/masuk"
               android:textColor="@color/white"
               android:layout_marginTop="176dp"
               android:background="@drawable/general_bg_button"
               android:padding="10dp"
               android:layout_marginLeft="15dp"
               android:layout_marginRight="15dp"
               />


       </androidx.cardview.widget.CardView>

       <androidx.appcompat.widget.AppCompatButton
           android:layout_width="54dp"
           android:layout_height="54dp"
           android:layout_marginTop="397dp"
           android:layout_marginLeft="160.5dp"
           android:background="@drawable/login_biometric_uswa"
           />
       <TextView
           android:layout_width="157dp"
           android:layout_height="18dp"
           android:text="@string/lupapass_uswa"
           android:layout_marginTop="450dp"
           android:layout_marginLeft="109dp"
           android:textAlignment="center"
           android:textSize="11dp"
           android:textColor="@color/text_bank_uswa"
           />

       
       <ImageView
           android:layout_width="68.71dp"
           android:layout_height="30dp"
           android:layout_marginTop="490dp"
           android:layout_marginLeft="91.06dp"
           android:layout_marginRight="215.23dp"
           android:background="@drawable/imageojk"
           />

       <ImageView
           android:layout_width="30dp"
           android:layout_height="30dp"
           android:layout_marginTop="490dp"
           android:layout_marginLeft="169.77dp"
           android:layout_marginRight="175.23dp"
           android:background="@drawable/imageb"
           />

       <ImageView
           android:layout_width="74.17dp"
           android:layout_height="30dp"
           android:layout_marginTop="490dp"
           android:layout_marginLeft="209.77dp"
           android:layout_marginRight="91.06dp"
           android:background="@drawable/imagelps"
           />

       <TextView
           android:layout_width="335dp"
           android:layout_height="30dp"
           android:text="@string/contentbottomlogin"
           android:layout_marginTop="530dp"
           android:layout_marginBottom="70dp"
           android:layout_marginRight="20dp"
           android:layout_marginLeft="20dp"
           android:textSize="8dp"
           android:textColor="@color/text_content1.2"
           android:textAlignment="center"
           />

   </androidx.cardview.widget.CardView>
    







</androidx.constraintlayout.widget.ConstraintLayout>